wp-content/themes/cpipr/less/style.less
/* ... */
/* Language switch */
.material-switch-lang {
  width: 74px;
}

.material-switch-lang .lbl-lang,
.material-switch-lang .lbl-curr-lang {
  display: block;
  font-family: @font-family-secondary;
  font-size: 11px;
  text-align: center;
}

.material-switch-lang .lbl-lang {
  font-weight: bold;
}
.material-switch-lang .lbl-curr-lang {
  color: #ef5125;
}

.material-switch-lang .material-switch {
  margin: 0 auto 7px auto;
  width: 52px;
}

/* Custom Single post entry content */
body.normal.single-post .entry-content {
  padding: 0 17%;
}
@media (max-width: 767px) {
  body.normal.single-post .entry-content {
    padding: 0;
  }
}

/* Navis slideshow */
.slick-slide img {
  width: 100%;
}

.navis-slideshow .wp-media-credit {
  text-align: left;
}
.navis-slideshow .wp-caption-text {
  font-family: @font-family-sans-serif-condensed;
}

@import "_responsive.less";

